--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 header {
    position:relative;
-   height: 8rem;
+   height: 50vh;
     background: url("weightless-60632_1280.jpg");
    box-shadow: 0 4px 0.3125rem rgba(0, 0, 0, 0.3);
  }
