--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 header {
-   position:relative;
+   position:center;
    height: 30vh;
     background: url("weightless-60632_1280.jpg");
    box-shadow: 0 4px 0.3125rem rgba(0, 0, 0, 0.3);
