--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     position: absolute;
     top: 3rem;
     left: 3rem;
-    font-size: 9rem;
+    font-size: 6px;
     color: white;
  }
 
